tdf#142121 Cell focus rectangle does not use font color

* The black square in the down right corner is also
  highlight color now

Change-Id: I249872da70cde25b2d14e6fb3189a5a21e52f492